java version upgraded to 21 and creation of new thread replaced for virtual threads